recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: not found: value longueur
	avance(longueur)
               ^Spiral:6: error: not found: value nbPas
	spiral(nbPas-1, angle, longueur+increment, increment)
               ^